# Receiptly

./: .gitignore  README.md  dump.rdb  pyproject.toml
Receiptly/: data.json  dependencies.txt  dump.rdb  manage.py  requirements.txt
Receiptly/Receiptly/: asgi.py  settings.py  urls.py  wsgi.py
Receiptly/api/: _schema.py  admin.py  forms.py  models.py  redis_script.py  schema.py  serializers.py  urls.py  views.py
Receiptly/api/_migrations/: 0002_rename_test_receipt_deadline_notice.py  0004_rename_deadline_notice_receipt_test.py  0005_rename_test_receipt_deadline_notice.py
Receiptly/api/graphql_config/: input_types.py  mutation_schema.py  output_types.py  query_schema.py  types.py
Receiptly/api/migrations/: 0001_initial.py  0002_receipt_new_field.py  0003_receipt_deadline_date.py  0003_remove_receipt_new_field.py  0004_alter_product_unit.py  0005_alter_product_unit.py  0006_alter_product_unit.py  0006_receipt_state.py  0007_alter_receipt_order_date_alter_receipt_products.py  0008_alter_receipt_products.py  0009_product_new_product_type.py  0010_remove_product_new_product_type_and_more.py  0011_receipt_state_new.py  0012_alter_receipt_state_new.py  0013_remove_receipt_state_new_alter_receipt_state.py  0014_rename_address_receipt_customer_address_and_more.py  0015_alter_product_product_type.py  0016_alter_product_product_type.py  0017_alter_receipt_state.py
Receiptly/receiptly-front/: .dockerignore  dockerfile  nginx.conf  package-lock.json  package.json
Receiptly/receiptly-front/src/: App.css  App.js  index.js
Receiptly/receiptly-front/src/Api/: api.js
(+43 files in other folders)
