[tool.poetry]
name = "receiptly"
version = "0.1.0"
description = ""
authors = ["Samyar <samyar1380@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
django = "^5.1"
django-cors-headers = "^4.4.0"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.9"
graphene-django = "^3.2.2"
redis = {extras = ["hiredis"], version = "^5.0.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
